objects/ASI_MFM_A_C_Code__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_A_C_Code_Type__c</fullName>
        <formula>CASE( LEFT( ASI_MFM_A_C_Code__c , 1) , 
&quot;1&quot;, &quot;BS&quot;, 
&quot;2&quot;, &quot;BS&quot;,
&quot;3&quot;, &quot;DF&quot;,
&quot;4&quot;, &quot;DF&quot;,
&quot;5&quot;, &quot;DF&quot;,
&quot;6&quot;, &quot;DP&quot;,
&quot;9&quot;, &quot;DP&quot;,
&quot;ERROR&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>A/C Code Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_ContractSetupCode__c</fullName>
        <label>Contract Setup Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Default_For__c</fullName>
        <label>Default For</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>FOC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Promotion_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion Type</label>
        <referenceTo>ASI_CRM_Promotion_Type_of_A_C_Code__c</referenceTo>
        <relationshipLabel>A/C Codes</relationshipLabel>
        <relationshipName>A_C_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Subsidary__c</fullName>
        <label>Subsidary</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_A_C_Code__c</fullName>
        <label>A/C Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_A_C_Description__c</fullName>
        <label>A/C Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_A_C_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>A/C External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_MFM_A_and_P_Tree__c</fullName>
        <label>A and P Tree</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TOTAL A&amp;P</fullName>
                </value>
                <value>
                    <fullName>Total A&amp;D</fullName>
                </value>
                <value>
                    <fullName>A&amp;D+A&amp;P</fullName>
                </value>
                <value>
                    <fullName>TOTAL A&amp;P+DISCOUNT</fullName>
                </value>
                <value>
                    <fullName>Legal Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Cash_Out_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cash Out Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Dummy_A_C__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dummy A/C</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_GL_Class__c</fullName>
        <label>GL Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>Cambodia</fullName>
                </value>
                <value>
                    <fullName>Myanmar</fullName>
                </value>
                <value>
                    <fullName>Laos</fullName>
                </value>
                <value>
                    <fullName>Philippines</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Marketing_Category__c</fullName>
        <label>Marketing Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ASI_MFM_Reporting_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Marketing Category</fullName>
                </value>
                <value>
                    <fullName>6. Yearend Accural</fullName>
                </value>
                <value>
                    <fullName>8. To Be Delete</fullName>
                </value>
                <value>
                    <fullName>2. Other Consumer</fullName>
                </value>
                <value>
                    <fullName>1. Media</fullName>
                </value>
                <value>
                    <fullName>A&amp;D Accrual for Cash rebate</fullName>
                </value>
                <value>
                    <fullName>A&amp;D Accrual for FOC</fullName>
                </value>
                <value>
                    <fullName>Free Goods FOC</fullName>
                </value>
                <value>
                    <fullName>Services paid to distributors</fullName>
                </value>
                <value>
                    <fullName>Price promotion</fullName>
                </value>
                <value>
                    <fullName>A&amp;P Accrual</fullName>
                </value>
                <value>
                    <fullName>Media (Consumer)</fullName>
                </value>
                <value>
                    <fullName>Display Material</fullName>
                </value>
                <value>
                    <fullName>Public Relations</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>Purchase Incentive</fullName>
                </value>
                <value>
                    <fullName>Direct Marketing</fullName>
                </value>
                <value>
                    <fullName>Packing</fullName>
                </value>
                <value>
                    <fullName>Internet</fullName>
                </value>
                <value>
                    <fullName>Misc Consumer A&amp;P expense</fullName>
                </value>
                <value>
                    <fullName>Agency Fee</fullName>
                </value>
                <value>
                    <fullName>Presentation/Promoter</fullName>
                </value>
                <value>
                    <fullName>Trade-Misc</fullName>
                </value>
                <value>
                    <fullName>Consumer Research</fullName>
                </value>
                <value>
                    <fullName>Consumer Merchandising/Promotion</fullName>
                </value>
                <value>
                    <fullName>Packaging</fullName>
                </value>
                <value>
                    <fullName>Agency Fees/Commissions</fullName>
                </value>
                <value>
                    <fullName>Consumer Advertising</fullName>
                </value>
                <value>
                    <fullName>Display Allowances</fullName>
                </value>
                <value>
                    <fullName>Cash Sponsorship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Offset_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Offset Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Reporting_Category__c</fullName>
        <label>Reporting Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ASI_MFM_A_and_P_Tree__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>E. Yearend Commitment</fullName>
                </value>
                <value>
                    <fullName>F. Exclude COA</fullName>
                </value>
                <value>
                    <fullName>A. Total Consumer A&amp;P</fullName>
                </value>
                <value>
                    <fullName>A&amp;D Accrual</fullName>
                </value>
                <value>
                    <fullName>A&amp;D</fullName>
                </value>
                <value>
                    <fullName>A&amp;P Accrual</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Trade</fullName>
                </value>
                <value>
                    <fullName>TOTAL OTHER CONSUMER A&amp;P</fullName>
                </value>
                <value>
                    <fullName>TOTAL MEDIA</fullName>
                </value>
                <value>
                    <fullName>TOTAL TRADE</fullName>
                </value>
                <value>
                    <fullName>B. Total Trade A&amp;P</fullName>
                </value>
                <value>
                    <fullName>D. Total Services Paid to Distrbutors</fullName>
                </value>
                <value>
                    <fullName>C. Total Allowance &amp; Disc</fullName>
                </value>
                <value>
                    <fullName>Agency Fee</fullName>
                </value>
                <value>
                    <fullName>General Expense</fullName>
                </value>
                <value>
                    <fullName>Trade A&amp;P</fullName>
                </value>
                <value>
                    <fullName>TOTAL MEDIA A&amp;P</fullName>
                </value>
                <value>
                    <fullName>TOTAL TRADE A&amp;P</fullName>
                </value>
                <value>
                    <fullName>Consumers A&amp;P</fullName>
                </value>
                <value>
                    <fullName>Service Paid to Distributor</fullName>
                </value>
                <value>
                    <fullName>Allowances and Disc</fullName>
                </value>
                <value>
                    <fullName>TOTAL ATL CONSUMER A&amp;P (INCL. MEDIA)</fullName>
                </value>
                <value>
                    <fullName>TOTAL CONSUMER A&amp;P</fullName>
                </value>
                <value>
                    <fullName>Total A&amp;P Expense</fullName>
                </value>
                <value>
                    <fullName>TOTAL A&amp;P</fullName>
                </value>
                <value>
                    <fullName>TOTAL SERVICE TO DISTRIBUTORS</fullName>
                </value>
                <value>
                    <fullName>PL Item</fullName>
                </value>
                <value>
                    <fullName>BS Item</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_TH_Prefix__c</fullName>
        <label>Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_TR_Rec_Type__c</fullName>
        <description>The value is only allow:
PRADF 
PRJDF</description>
        <label>TR Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>A/C Code</label>
    <listViews>
        <fullName>ASI_CRM_JP_All_A_C_Code</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_A_C_Code__c</columns>
        <columns>ASI_MFM_A_C_Description__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_A_C_Code__c.ASI_CRM_JP_A_C_Code</value>
        </filters>
        <label>All JP CRM A/C Code</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_JP_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_MY_Contract_A_C_Codes</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_A_C_Code__c</columns>
        <columns>ASI_MFM_A_C_Description__c</columns>
        <columns>ASI_MFM_A_C_External_ID__c</columns>
        <columns>ASI_MFM_A_and_P_Tree__c</columns>
        <columns>ASI_CRM_ContractSetupCode__c</columns>
        <columns>ASI_MFM_GL_Class__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_A_C_Code__c.ASI_MFM_MY_A_C_Code</value>
        </filters>
        <label>ASI CRM MY Contract A/C Codes</label>
        <language>en_GB</language>
        <sharedTo>
            <roleAndSubordinates>ASI_MY</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_MFM_CAP_HK_All_A_C_Code</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_A_C_Code__c</columns>
        <columns>ASI_MFM_A_C_Description__c</columns>
        <columns>ASI_MFM_A_and_P_Tree__c</columns>
        <columns>ASI_MFM_Reporting_Category__c</columns>
        <columns>ASI_MFM_Marketing_Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_A_C_Code__c.ASI_MFM_CAP_HK_A_C_Code</value>
        </filters>
        <label>All CAP HK A/C Code</label>
        <language>en_GB</language>
        <sharedTo>
            <group>ASI_MFM_CAP_HK_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_MFM_CAP_OTH_A_C_Code</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_A_C_Code__c</columns>
        <columns>ASI_MFM_A_C_Description__c</columns>
        <columns>ASI_MFM_A_and_P_Tree__c</columns>
        <columns>ASI_MFM_Reporting_Category__c</columns>
        <columns>ASI_MFM_Marketing_Category__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_A_C_Code__c.ASI_MFM_CAP_OTH_A_C_Code</value>
        </filters>
        <label>All CAP Other A/C Code</label>
        <language>en_GB</language>
        <sharedTo>
            <group>ASI_MFM_CAP_TW_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_MFM_CAP_SG_All_A_C_Code</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_A_C_Code__c</columns>
        <columns>ASI_MFM_A_C_Description__c</columns>
        <columns>ASI_MFM_A_and_P_Tree__c</columns>
        <columns>ASI_MFM_Reporting_Category__c</columns>
        <columns>ASI_MFM_Marketing_Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_A_C_Code__c.ASI_MFM_CAP_SG_A_C_Code</value>
        </filters>
        <label>All CAP SG A/C Code</label>
        <language>en_GB</language>
        <sharedTo>
            <group>ASI_MFM_CAP_SG_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_MFM_CAP_TH_All_A_C_Code</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_A_C_Code__c</columns>
        <columns>ASI_MFM_A_C_Description__c</columns>
        <columns>ASI_MFM_A_and_P_Tree__c</columns>
        <columns>ASI_MFM_Reporting_Category__c</columns>
        <columns>ASI_MFM_Marketing_Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_A_C_Code__c.ASI_MFM_CAP_TH_A_C_Code</value>
        </filters>
        <label>All CAP TH A/C Code</label>
        <language>en_GB</language>
        <sharedTo>
            <group>ASI_MFM_CAP_TH_Finance</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_MFM_HK</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_A_C_Code__c</columns>
        <columns>ASI_MFM_A_C_Description__c</columns>
        <columns>ASI_MFM_A_C_External_ID__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>ASI_MFM_A_and_P_Tree__c</columns>
        <columns>ASI_MFM_Reporting_Category__c</columns>
        <columns>ASI_MFM_Marketing_Category__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_A_C_Code__c.ASI_MFM_HK_A_C_Code</value>
        </filters>
        <label>ASI MFM HK</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_MFM_PH_DF_Power_User</group>
            <group>ASI_MFM_PH_DF_Standard_User</group>
            <group>ASI_MFM_PH_DP_Power_User</group>
            <group>ASI_MFM_PH_DP_Standard_User</group>
            <group>ASI_MFM_PH_IT_User</group>
            <group>ASI_MFM_PH_Submitter</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_MFM_KR</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_A_C_Code__c</columns>
        <columns>ASI_MFM_Dummy_A_C__c</columns>
        <columns>ASI_MFM_A_C_External_ID__c</columns>
        <columns>ASI_MFM_A_C_Description__c</columns>
        <columns>ASI_MFM_Market__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>ASI_MFM_Cash_Out_Payment__c</columns>
        <columns>ASI_MFM_Offset_Payment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_A_C_Code__c.ASI_MFM_KR_A_C_Code</value>
        </filters>
        <label>ASI MFM KR</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_KOR_All_Users</group>
            <group>ASI_KOR_CSD_MOT_Venue</group>
            <group>ASI_KOR_CSD_Metro_WS</group>
            <group>ASI_KOR_CSD_Outside_Metro_WS_TOT</group>
            <group>ASI_KOR_CSD_TOT_Venue</group>
            <group>ASI_KOR_Channel_Sales_Drs_TM_Off_Trade</group>
            <group>ASI_KOR_IT_Admin</group>
            <group>ASI_KOR_Sales_Director_MD_Management</group>
            <group>ASI_KOR_Sales_Director_MOT_Venue</group>
            <group>ASI_KOR_Sales_Director_Metro_WS</group>
            <group>ASI_KOR_Sales_Director_TOT_Venue</group>
            <group>ASI_KOR_Sales_Director_WS</group>
            <group>ASI_KOR_Sales_Team_CVS_Dept_Stores</group>
            <group>ASI_KOR_Sales_Team_Hyper</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_MFM_PH_DF</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_A_C_Code__c</columns>
        <columns>ASI_MFM_A_C_Description__c</columns>
        <columns>ASI_MFM_A_C_External_ID__c</columns>
        <columns>ASI_MFM_Dummy_A_C__c</columns>
        <columns>ASI_MFM_Market__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_A_C_Code__c.ASI_MFM_PH_DF_A_C_Code</value>
        </filters>
        <label>ASI MFM PH DF</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_MFM_PH_DF_Power_User</group>
            <group>ASI_MFM_PH_DF_Standard_User</group>
            <group>ASI_MFM_PH_DP_Power_User</group>
            <group>ASI_MFM_PH_DP_Standard_User</group>
            <group>ASI_MFM_PH_IT_User</group>
            <group>ASI_MFM_PH_Submitter</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_MFM_PH_DP</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_A_C_Code__c</columns>
        <columns>ASI_MFM_Dummy_A_C__c</columns>
        <columns>ASI_MFM_A_C_External_ID__c</columns>
        <columns>ASI_MFM_A_C_Description__c</columns>
        <columns>ASI_MFM_Market__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_A_C_Code__c.ASI_MFM_PH_DP_A_C_Code</value>
        </filters>
        <label>ASI MFM PH DP</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_MFM_PH_DF_Power_User</group>
            <group>ASI_MFM_PH_DF_Standard_User</group>
            <group>ASI_MFM_PH_DP_Power_User</group>
            <group>ASI_MFM_PH_DP_Standard_User</group>
            <group>ASI_MFM_PH_IT_User</group>
            <group>ASI_MFM_PH_Submitter</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_SG_CRM_Credit_Note_A_C_Code</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_A_C_Code__c</columns>
        <columns>ASI_MFM_A_C_Description__c</columns>
        <columns>ASI_MFM_TR_Rec_Type__c</columns>
        <columns>ASI_MFM_Market__c</columns>
        <columns>ASI_MFM_Dummy_A_C__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_MFM_A_C_External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_A_C_Code__c.ASI_CRM_SG_CDNote_A_C_Code</value>
        </filters>
        <label>SG CRM Credit Note A/C Code</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_SG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TnE_HK_All_A_C_Code</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_A_C_Code__c</columns>
        <columns>ASI_MFM_A_C_Description__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_A_C_Code__c.ASI_TnE_HK_A_C_Code</value>
        </filters>
        <label>All HK TnE A/C Code</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_HK_Finance_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_A_and_P_Tree__c</columns>
        <columns>ASI_MFM_A_C_Code__c</columns>
        <columns>ASI_MFM_A_C_Description__c</columns>
        <columns>ASI_MFM_Reporting_Category__c</columns>
        <columns>ASI_MFM_Marketing_Category__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_MFM_Dummy_A_C__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_ATR_A_C_Code</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_A_C_Description__c</columns>
        <columns>ASI_MFM_A_C_Code__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_MFM_TR_Rec_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_A_C_Code__c.ASI_MFM_TR_A_C_Code</value>
        </filters>
        <label>All ATR A/C Code</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_DFPM_Pernod_Ricard_Asia_Duty_Free</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_TW_MFM_A_AC_Code</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_GL_Class__c</columns>
        <columns>ASI_MFM_A_and_P_Tree__c</columns>
        <columns>ASI_MFM_A_C_Code__c</columns>
        <columns>ASI_MFM_A_C_Description__c</columns>
        <columns>ASI_MFM_Reporting_Category__c</columns>
        <columns>ASI_MFM_Marketing_Category__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_MFM_Dummy_A_C__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_MFM_Dummy_A_C__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All TW MFM Accrual Code</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_MFM_TW_Accrual_PO_Users</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>A/C</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>A/C Codes</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_JP_A_C_Code</fullName>
        <active>true</active>
        <label>CRM JP A/C Code</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_CDNote_A_C_Code</fullName>
        <active>true</active>
        <label>SG Credit Debit Note A/C Code</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TH_A_C_Code</fullName>
        <active>true</active>
        <label>TH CRM A/C Code</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_JP_A_C_Code</fullName>
        <active>true</active>
        <label>JP A/C Code</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_CAP_A_C_Code</fullName>
        <active>true</active>
        <label>CAP A/C Code</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_CAP_HK_A_C_Code</fullName>
        <active>true</active>
        <label>CAP HK A/C Code</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_CAP_OTH_A_C_Code</fullName>
        <active>true</active>
        <label>CAP Other A/C Code</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_CAP_SG_A_C_Code</fullName>
        <active>true</active>
        <label>CAP SG A/C Code</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_CAP_TH_A_C_Code</fullName>
        <active>true</active>
        <label>CAP TH A/C Code</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_CN_A_C_Code</fullName>
        <active>true</active>
        <label>CN A/C Code</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_GF_A_C_Code</fullName>
        <active>true</active>
        <label>GF A/C Code</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_HK_A_C_Code</fullName>
        <active>true</active>
        <label>HK A/C Code</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_KR_A_C_Code</fullName>
        <active>true</active>
        <label>KR A/C Code</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_MY_A_C_Code</fullName>
        <active>true</active>
        <label>MY A/C Codes</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_PH_DF_A_C_Code</fullName>
        <active>true</active>
        <label>PH DF A/C Code</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_PH_DP_A_C_Code</fullName>
        <active>true</active>
        <label>PH DP A/C Code</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_RM_A_C_Code</fullName>
        <active>true</active>
        <label>RM A/C Code</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_SC_A_C_Code</fullName>
        <active>true</active>
        <label>SC A/C Code</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_SG_A_C_Code</fullName>
        <active>true</active>
        <label>SG A/C Code</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_TH_A_C_Code</fullName>
        <active>true</active>
        <label>TH A/C Code</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_TR_A_C_Code</fullName>
        <active>true</active>
        <label>TR A/C Code</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_TW_A_C_Code</fullName>
        <active>true</active>
        <label>TW A/C Code</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_HK_A_C_Code</fullName>
        <active>true</active>
        <label>TnE HK A/C Code</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>